# G6_

./: .env.example  .env.summary  .gitignore  .pre-commit-config.yaml  .summary_metrics_http_body_full.txt  .summary_metrics_http_body_prefix.txt  .summary_metrics_http_trace.txt  .unified_http_started_9329  .unified_http_started_9382  .unified_http_started_9389  .unified_http_started_9399  ALERTS_PANEL_ENHANCEMENT.md  CHANGELOG.md  CHANGELOG_DASHBOARDS.md  CHANGELOG_STABILIZATION.md  CLEANUP_PLAN.md  COLUMN_STORE_INTEGRATION.md  DEFERRED_ENHANCEMENTS.md  DEPLOYMENT_GUIDE.md  DEPRECATIONS.md  DEVELOPMENT_GUIDELINES.md  EGRESS_FREEZE.md  EMISSION_BATCHER_ENHANCEMENTS.md  EMITTERS_REPORT_TEMP.md  ENHANCED_COLLECTOR_RETIREMENT.md  ENV_FLAGS_TABLES.md  ERROR_ROUTING.md  FILE_STRUCTURE.md  FOOTER_INTEGRATION_ENHANCEMENT.md  FOOTER_SCREENSHOT_MATCH.md  GRAFANA_GENERATION.md  GRAFANA_PROVISIONING_CHECKLIST.md  GRAFANA_V4_DASHBOARD.md  ISSUE_REMOVE_LEGACY_PANELS_BRIDGE.md  LONG_TERM_TODO.md  MARKET_CLOSE_SHUTDOWN.md  METRICS_CATALOG.md  METRICS_GOVERNANCE.md  METRICS_PANELS_HINTS.md  MIGRATION.md  (+96 more)
.github/: dependabot.yml
_tmp/: probe_stdout.py  stdout_sink_probe.py
archive/: README.md  debug_catalog_http.py  debug_catalog_http_9321.py  inspect_indent.py  list_lines.py  list_lines2.py  overlays_demo.html  temp_debug2.py  temp_debug_unified_http.py  temp_event_debug.py  temp_http_trend_check.py  temp_repro_health_test.py  temp_sse_diag.py  temp_trend_check.py  walk1.py
clients/: js_sse_client.js  python_sse_client.py
config/: _g6_config.json  config.json  g6_config.json  g6_config_dummy.json  g6_terminal.json  index_params.json  schema_v2.json
data/: catalog_http_debug.json  parity_weight_study_sample.json  runtime_status.json  runtime_status_closed.json  runtime_status_demo.json  runtime_status_demo_inject.json  runtime_status_test.json  tmp_status.json  tmp_status2.json  tmp_status3.json  tmp_status4.json  tmp_status5.json  tmp_status6.json  tmp_status_marker.json  tmp_status_prefetch.json  tmp_status_synthetic.json
docs/: ARCHITECTURE.md  CLEANUP_FINAL_REPORT.md  CLEANUP_PROPOSALS.md  CONFIGURATION.md  CONFIG_FEATURE_TOGGLES.md  CONFIG_KEYS_CATALOG.md  DASHBOARD_DISTRIBUTION.md  DEPRECATIONS.md  DEPRECATIONS_SUMMARY.md  DESIGN_SUMMARY_PANELS_UNIFICATION.md  ENVIRONMENT.md  ENV_LIFECYCLE.md  ENV_VARS_AUTO.json  ENV_VARS_AUTO.md  ENV_VARS_CATALOG.md  ERROR_HANDLING.md  EXEC_SUMMARY.md  FILE_ACCESS_BEST_PRACTICES.md  FINAL_EXPIRY_AND_CSV_INTEGRITY_SUMMARY.md  GOVERNANCE.md  GOVERNANCE_METRICS.md  INDEX.md  METRICS.md  METRICS_CATALOG.md  METRICS_MIGRATION.md  METRICS_USAGE.md  OBSERVABILITY_DASHBOARDS.md  OBSERVABILITY_TOGGLES_2025-09.md  OBSERVABILITY_WINDOWS.md  OVERLAYS_LIVE.md  OVERLAY_USAGE_TELEMETRY.md  PANELS_FACTORY.md  PARALLEL_COLLECTION.md  REDUNDANT_COMPONENTS.md  RELEASE_NOTES_TEMPLATE.md  RETENTION_POLICY.md  RULES_CATALOG.md  SSE.md  SSE_ARCHITECTURE.md  SSE_SECURITY.md  (+29 more)
grafana/: README.md
src/: main.py  (+12 more)
(+2258 files in other folders)
